# genjin-compiler

./: .gitignore  CONSTITUTION.md  README.md  assembler.py  compiler.py  gui.mkb  install-extension.sh  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
code/: genjin_fixed.jinja2
code/tests/: basic.jinja2  default.jinja2
compiler/: __init__.py  __main__.py  ast_io.py  config.py  desugar.py  parser.py  resolve_imports.py  scanner.py  transpiler.py
docs/: api.md  assembler.md  genjin.md  language.md  proc-blocos.md
examples/: basic.gnj  implementation.jinja2  inline.gnj  lenhador-sintetico.gnj  lenhador.gnj  playground.gnj  test.gnj
genjin_compiler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ia/: architecture.md  backlog.md  code.md  decisions.md  experience.md  sprints.md
ia/backlog-items/: B-001.md  B-002.md  B-003.md  B-004.md  B-005.md  B-006.md  B-007.md  B-008.md  B-009.md  B-010.md  B-011.md  B-012.md  B-013.md  B-014.md  B-015.md  B-016.md  B-017.md  B-018.md  B-019.md  B-020.md  B-021.md  B-022.md  B-023.md  B-024.md  B-025.md  B-026.md  B-027.md  B-028.md  B-029.md  B-030.md  B-031.md
ia/sprints/: SPR-2026-01.md  SPR-2026-02.md  SPR-2026-03.md  SPR-2026-04.md  SPR-2026-05.md  SPR-2026-06.md  SPR-2026-07.md  SPR-2026-08.md  SPR-2026-09.md  SPR-2026-10.md  SPR-2026-11.md  SPR-2026-12.md  SPR-2026-13.md  SPR-2026-14.md  SPR-2026-15.md  SPR-2026-16.md  (+4 more)
mkb/: coder.py  indenter.py
tests/: conftest.py  test_b031_public_api.py
vscode-genjin/: README.md  language-configuration.json  package.json
(+107 files in other folders)
